Remove project creation and use simply a name
