# application/backend/src/api/project.py
@@ -4,7 +4,7 @@ from fastapi import APIRouter, Depends
 from fastapi.exceptions import HTTPException
 
 from api.dependencies import get_project_service
-from schemas import Dataset, Project, ProjectConfig
+from schemas import Dataset, Project
 from services.project_service import ProjectService
 from storage.storage import load_project, write_project
 from utils.dataset import get_dataset
@@ -18,17 +18,18 @@ async def list_projects(project_service: Annotated[ProjectService, Depends(get_p
     return project_service.list_projects()
 
 @router.put("")
-async def create_project(project: ProjectConfig) -> str:
+async def create_project(
+    project: Project,
+    project_service: Annotated[ProjectService, Depends(get_project_service)]) -> Project:
     """Create a new project"""
-    write_project(project)
-    return project.id
+    return project_service.create_project(project)
 
 
 @router.get("/{id}")
-async def get_project(id: str) -> ProjectConfig:
+async def get_project(id: str, project_service: Annotated[ProjectService, Depends(get_project_service)]) -> Project:
     """Get project by id"""
 
-    return load_project(id)
+    return project_service.get_project_by_id(id)
 
 
 @router.get("/{project_id}/datasets/{repo}/{id}")
